--- a/Dashboard/Areas/TeamEntity/Views/Player/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/CreateOrEdit.cshtml
@@ -155,6 +155,13 @@
                                                 <span asp-validation-for="TotalPoints" class="text-danger"></span>
                                             </div>
                                         </div>
+                                        <div class="col-md-6 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="Position" class="form-label"></label>
+                                                <input asp-for="Position" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get($"Position"))" />
+                                                <span asp-validation-for="Position" class="text-danger"></span>
+                                            </div>
+                                        </div>
                                     </div>
 
                                     <div class="row">
