--- a/Dashboard/Areas/TeamEntity/Views/Player/Details.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Details.cshtml
@@ -26,14 +26,14 @@
                     <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.PlayerPosition):</dt>
                     <dd class="col-sm-8 mb-1">@Model.PlayerPosition.Name</dd>
 
-
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Position):</dt>
+                    <dd class="col-sm-8 mb-1">@Model.Position</dd>
                 </dl>
             </div>
             <div class="col-xl-6 col-12">
                 <dl class="row mb-0">
 
-                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TotalPoints):</dt>
-                    <dd class="col-sm-8 mb-1">@Model.TotalPoints</dd>
+
 
                     <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model._365_PlayerId):</dt>
                     <dd class="col-sm-8 mb-1">@Model._365_PlayerId</dd>
@@ -50,7 +50,8 @@
                     </dd>
 
 
-
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TotalPoints):</dt>
+                    <dd class="col-sm-8 mb-1">@Model.TotalPoints</dd>
 
                 </dl>
             </div>
